Metric get